Atualizações na Interface

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <h1>Hello Word Mini Curso Git </h1>
+    <h2>Saia do zero e comece a versionar seus projetos</h2>
+    <footer>
+        <p>
+            Desenvolvido por
+            <a href="https://instagram.com/author">Developer</a> em 2024.
+        </p>
+    </footer>
 </body>
-</html>
+</html> 
