--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
 <body>
     <h1>Hello Word Mini Curso Git </h1>
     <h2>Saia do zero e comece a versionar seus projetos</h2>
+    <button onclick="alert('Obrigado por clicar')">Clique Aqui</button>
     <footer>
         <p>
             Desenvolvido por
